--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.3.1"
+    "sonner": "^1.3.1",
+    "tw-elements": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
