--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.21.3",
     "redux-persist": "^6.0.0",
     "sonner": "^1.3.1",
+    "sweetalert2": "^11.10.4",
     "tw-elements": "^1.1.0"
   },
   "devDependencies": {
